got wall stress working

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -11,7 +11,7 @@
 
 @incollection{HARTEL1996283,
 	address = {London},
-	author = {Carlos H{\"a}rtel},
+	author = {Carlos Hartel},
 	booktitle = {Handbook of Computational Fluid Mechanics},
 	editor = {Roger Peyret},
 	pages = {283-338},
