added wind stress model

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -46,4 +46,21 @@
     pages={331–354}
 }
 
+@article{fairall2011,
+	author = {Fairall, C. W. and Yang, Mingxi and Bariteau, Ludovic and Edson, J. B. and Helmig, D. and McGillis, W. and Pezoa, S. and Hare, J. E. and Huebert, B. and Blomquist, B.},
+	journal = {Journal of Geophysical Research: Oceans},
+	number = {C4},
+	title = {Implementation of the Coupled Ocean-Atmosphere Response Experiment flux algorithm with CO2, dimethyl sulfide, and O3},
+	volume = {116},
+	year = {2011}
+}
 
+@article{smith1988,
+	author = {Smith, Stuart D.},
+	journal = {Journal of Geophysical Research: Oceans},
+	number = {C12},
+	pages = {15467-15472},
+	title = {Coefficients for sea surface wind stress, heat flux, and wind profiles as a function of wind speed and temperature},
+	volume = {93},
+	year = {1988}
+}
