added heat exchange and fixed docstrings

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -64,3 +64,26 @@
 	volume = {93},
 	year = {1988}
 }
+
+@article{alduchov1996,
+	author = {Oleg A. Alduchov and Robert E. Eskridge},
+	journal = {Journal of Applied Meteorology and Climatology},
+	number = {4},
+	pages = {601 - 609},
+	title = {Improved Magnus Form Approximation of Saturation Vapor Pressure},
+	volume = {35},
+	year = {1996}
+}
+
+@incollection{yu2019,
+	address = {Oxford},
+	author = {Lisan Yu},
+	booktitle = {Encyclopedia of Ocean Sciences (Third Edition)},
+	edition = {Third Edition},
+	editor = {J. Kirk Cochran and Henry J. Bokuniewicz and Patricia L. Yager},
+	pages = {15-23},
+	publisher = {Academic Press},
+	title = {Sea Surface Exchanges of Momentum, Heat, and Freshwater Determined by Satellite Remote Sensing☆},
+	year = {2019}
+}
+
